--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ img {
 .title-description {
   display: block;
   text-align: center;
-  color: #FFD500;
+  color: #000000;
   font-weight: 400;
   letter-spacing: .5px;
   font-size: 1.2rem;
