--- a/scss/style.scss
+++ b/scss/style.scss
@@ -238,12 +238,14 @@ width: 100%;
 .title-description {
     display: block;
     text-align: center;
-    color: #FFD500;
+    color: #000000;
     font-weight: 400;
     letter-spacing: .5px;
     font-size: 1.2rem;
     margin-bottom: 4rem;
 }
+
+
 
 .section-subheading {
     font-size: 1.6rem;
