--- a/css/style.css
+++ b/css/style.css
@@ -191,8 +191,8 @@ img {
 .title-description {
   display: block;
   text-align: center;
-  color: #000000;
-  font-weight: 400;
+  color: #858585;
+  font-weight: 600;
   letter-spacing: .5px;
   font-size: 1.2rem;
   margin-bottom: 4rem;
@@ -245,7 +245,7 @@ img {
   aspect-ratio: 2/1;
   object-fit: cover;
   object-position: 1;
-  border: 3px #FDC500 solid;
+  border: 3px #00509D solid;
   border-radius: 12px;
 }
 
@@ -261,7 +261,7 @@ img {
 
 .socails i {
   font-size: 1.5rem;
-  color: #FDC500;
+  color: #00509D;
 }
 
 .socails a {
@@ -318,6 +318,10 @@ footer {
 
 .text-light {
   color: #fff;
+}
+
+.text-mid {
+  color: #d2d2d2;
 }
 
 .btn-effect {
