--- a/scss/style.scss
+++ b/scss/style.scss
@@ -402,6 +402,9 @@ color:#fff
 .text-mid{
     color:rgb(210, 210, 210);
 }
+.text-grey{
+    color:rgb(133, 133, 133);
+}
 
 .btn-effect{
     color:black;
